testdata/baselines/reference/submodule/compiler/nodeNextCjsNamespaceImportDefault1.errors.txt
src/foo.mts(6,4): error TS2339: Property 'default' does not exist on type '{ readonly a: number; }'.


==== src/a.cts (0 errors) ====
    export const a: number = 1;
==== src/foo.mts (1 errors) ====
    import d, {a} from './a.cjs';
    import * as ns from './a.cjs';
    export {d, a, ns};
    
    d.a;
    ns.default.a;
       ~~~~~~~
!!! error TS2339: Property 'default' does not exist on type '{ readonly a: number; }'.